# ros-indigo-robotino

./: .gitignore  README.md
invert_laser/: CMakeLists.txt  package.xml
invert_laser/include/: invert_laser.h
invert_laser/launch/: invert_laser.launch
invert_laser/src/: invert_laser.cpp  invert_laser_node.cpp
robotino/: CMakeLists.txt  package.xml  package.xml~
robotino_arduino/: CMakeLists.txt  CMakeLists.txt~  package.xml~
robotino_arduino/launch/: robotino_arduino.launch  robotino_arduino.launch~
robotino_arduino/msg/: Mag.msg  Ultrasound.msg
robotino_arduino/src/: robotino_arduino_node.cpp  robotino_arduino_node.cpp~
robotino_arduino/srv/: Calibrate.srv  GetMagDirection.srv
robotino_launch/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robotino_launch/launch/: module_A.launch  module_B.launch  module_a.launch  module_b.launch  module_b.launch~  robotino.launch  robotino.launch~  teste_B.launch
robotino_leds/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robotino_leds/config/: rosconsole.conf
robotino_leds/include/: RobotinoLeds.h  RobotinoLeds.h~  SinalizationModes.h
robotino_leds/launch/: debug_robotino_leds.launch  robotino_leds.launch  robotino_leds.launch~  robotino_leds_complete.launch  robotino_leds_complete.launch~
robotino_leds/src/: Colors.cpp  RobotinoLeds.cpp  RobotinoLeds.cpp~  SinalizationModes.cpp  robotino_leds_node.cpp
robotino_leds/srv/: GoFromTo.srv  Sinalize.srv  StopTransportation.srv  TransportProduct.srv  TransportProduct.srv~  Trigger.srv
robotino_local_move/: CMakeLists(rosbuild).txt  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
robotino_local_move/action/: LocalMove.action
robotino_local_move/include/: Robot.h  RobotinoLocalMoveClient.h  RobotinoLocalMoveServer.h
robotino_local_move/launch/: robotino_local_move.launch
robotino_local_move/msg/: LocalMoveAction.msg  LocalMoveActionFeedback.msg  LocalMoveActionGoal.msg  LocalMoveActionResult.msg  LocalMoveFeedback.msg  LocalMoveGoal.msg  LocalMoveResult.msg  PathDisplacements.msg  PathStatus.msg  RobotPos.msg
robotino_local_move/src/: Robot.cpp  RobotinoLocalMoveClient.cpp  RobotinoLocalMoveServer.cpp  manager_client.cpp  robotino_local_move_node.cpp  robotino_manager.cpp
robotino_local_move/srv/: FullPath.srv
robotino_local_planner/: CMakeLists(rosbuild).txt  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
robotino_local_planner/src/: RobotinoLocalPlanner.cpp
robotino_mapping/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robotino_mapping/include/: RobotinoMapping.h  RobotinoMapping.h~
robotino_mapping/launch/: robotino_mapping.launch  robotino_mapping.launch~
robotino_mapping/src/: RobotinoMapping.cpp  RobotinoMapping.cpp~  robotino_mapping_node.cpp
robotino_mapping/srv/: GetAreaCoordinates.srv  GetAreaCoordinates.srv~  GetCoordinates.srv  GetIndexes.srv  GetMap.srv~  GetProdustCoordinates.srv~  SetMap.srv  SetMap.srv~
robotino_motion/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
robotino_motion/action/: Align.action  GrabPuck.action  Motion.action  Motion.action~  Move.action  ReadOrder.action  ReadPuck.action  StorePuck.action
robotino_motion/config/: rosconsole.conf
robotino_motion/include/: AlignAlignmentModes.h  AlignDistanceModes.h  AlignServer.h  AlignStates.h  Colors.h  GrabPuckServer.h  GrabPuckStates.h  MovePathModes.h  MoveServer.h  MoveStates.h  MoveVelocityModes.h  PID.h  ReadOrderServer.h  ReadOrderStates.h  ReadPuckServer.h  ReadPuckStates.h  RobotinoMotionClient.h  RobotinoMotionClient.h~  RobotinoMotionClient_adriano.h  RobotinoMotionServer.h  RobotinoMotionServer.h~  Server.h  States.h  StoreModes.h  StorePuckServer.h  StorePuckStates.h  StoreStoreNumber.h  astar.h  astar_adriano.h
robotino_motion/launch/: debug_align.launch  debug_grab_puck.launch  debug_move_puck.launch  debug_read_order.launch  debug_read_puck.launch  robotino.launch  robotino_motion.launch  robotino_motion.launch~  robotino_motion_complete.launch  robotino_motion_complete.launch~  robotino_motion_server.launch~
robotino_motion/msg/: HasArrived.msg  MotionAction.msg  MotionActionFeedback.msg  MotionActionGoal.msg  MotionActionResult.msg  MotionFeedback.msg  MotionGoal.msg~  MotionResult.msg  RobotState.msg
robotino_motion/src/: AlignAlignmentModes.cpp  AlignDistanceModes.cpp  AlignServer.cpp  AlignStates.cpp  Colors.cpp  GrabPuckServer.cpp  GrabPuckStates.cpp  MovePathModes.cpp  MoveServer.cpp  MoveStates.cpp  MoveVelocityModes.cpp  PID.cpp  ReadOrderServer.cpp  ReadOrderStates.cpp  ReadPuckServer.cpp  ReadPuckStates.cpp  RobotinoMotionClient.cpp  RobotinoMotionClient.cpp~  RobotinoMotionClient_adriano.cpp  RobotinoMotionServer.cpp  RobotinoMotionServer.cpp~  Server.cpp  StoreModes.cpp  StorePuckServer.cpp  StorePuckStates.cpp  StoreStoreNumber.cpp  astar.cpp  astar.cpp~  astar_adriano.cpp  client_node.cpp  robotino_motion_client_node.cpp  robotino_motion_client_node.cpp~  robotino_motion_server_node.cpp  server_get_product~  server_node.cpp
robotino_motion/srv/: AchievedGoal.srv  Align.srv  Align.srv~  GetProduct.srv  GetProductsList.srv~  GetPuck.srv~  SetAchievedGoal.srv~
robotino_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robotino_msgs/msg/: DigitalReadings.msg  DigitalReadings.msg~
robotino_navigation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mainpage.dox  package.xml
robotino_navigation/.svn/: all-wcprops  entries
robotino_navigation/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
robotino_node/: CMakeLists.txt  CMakeLists.txt~  package.xml
robotino_node/include/: KinectROS.h  (+6 more)
robotino_planner/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robotino_safety/: CMakeLists(rosbuild).txt  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
robotino_teleop/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
robotino_vision/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
(+276 files in other folders)
