<?xml version="1.0"?>
<package>
  <name>invert_laser</name>
  <version>0.0.0</version>
  <description>The invert_laser package</description>
  <maintainer email="audeliano@gmail.com">Audeliano Wolian Li</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
