<?xml version="1.0"?>
<package>
	<name>robotino</name>
	<version>0.0.0</version>
	<description>The robotino metapackage</description>
	<maintainer email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</maintainer>
	<license>BSD</license>
	<url type="website">http://ros.org/wiki/robotino</url>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>robotino_description</run_depend>
	<run_depend>robotino_launch</run_depend>
	<run_depend>robotino_leds</run_depend>
	<run_depend>robotino_local_move</run_depend>
	<run_depend>robotino_local_planner</run_depend>
	<run_depend>robotino_motion</run_depend>
	<run_depend>robotino_msgs</run_depend>
	<run_depend>robotino_navigation</run_depend>
	<run_depend>robotino_node</run_depend>
	<run_depend>robotino_safety</run_depend>
	<run_depend>robotino_teleop</run_depend>
	<run_depend>robotino_vision</run_depend>

	<run_depend>invert_laser</run_depend>
	<run_depend>simple_navigation_goals</run_depend>
	<run_depend>laser_to_pcl</run_depend>

	<export>
		<metapackage/>
	</export>
</package>
