<?xml version="1.0"?>
<package>
  <name>robotino_local_planner</name>
  <version>0.0.0</version>
  <description>The robotino_local_planner package</description>
  <maintainer email="audeliano@gmail.com">Audeliano Wolian Li</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf</build_depend>
 
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <nav_core plugin="${prefix}/blp_plugin.xml"/>
  </export>
</package>
