<?xml version="1.0"?>
<package>
	<name>robotino_mapping</name>
	<version>0.0.0</version>
	<description>The robotino_mapping package</description>
	<maintainer email="adriano@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>robotino_motion</build_depend>
	<build_depend>robotino_planner</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>robotino_motion</run_depend>
	<run_depend>robotino_planner</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>

	<export>
	</export>
</package>
