<?xml version="1.0"?>
<package>
  <name>robotino_msgs</name>
  <version>0.0.0</version>
  <description>The robotino_msgs package</description>
  <maintainer email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>roscpp</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
