<?xml version="1.0"?>
<package>
	<name>robotino_node</name>
	<version>0.0.0</version>
	<description>The robotino_node package</description>
	<maintainer email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>image_transport</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>robotino_description</build_depend>
	<build_depend>robotino_msgs</build_depend>
	<build_depend>tf</build_depend>

	<run_depend>image_transport</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>pcl_conversions</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>robotino_description</run_depend>
	<run_depend>robotino_msgs</run_depend>
	<run_depend>tf</run_depend>

	<export>
	</export>
</package>
