<?xml version="1.0"?>
<package>
	<name>robotino_vision</name>
	<version>0.0.0</version>
	<description>The robotino_vision package</description>
	<maintainer email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>robotino_msgs</build_depend>
	<build_depend>robotino_node</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>opencv2</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>

	<run_depend>std_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>robotino_msgs</run_depend>
	<run_depend>robotino_node</run_depend>
	<run_depend>vision_opencv</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>openni_launch</run_depend>
	<run_depend>kinect_aux</run_depend>
</package>
